2012-11-03  Andrew Pinski  <apinski@cavium.com>

	 * gcc.target/mips/octeon-bbit-3.c: Change the second call to abort to
	call abort1 so that cross jumping does not happen.

2012-11-03  Oleg Endo  <olegendo@gcc.gnu.org>

	PR target/51244
	* gcc.target/sh/pr51244-18.c: New.
	* gcc.target/sh/pr51244-19.c: New.

2012-11-03  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/octeon-exts-7.c (bar): Make sure the extraction of
	b requires a 64-bit operation followed by a truncation.

2012-11-02  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/tree-ssa/loop-38.c: Correct testcase.

2012-11-02  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/pr48258-2.c: Simplfy the acceptance
	conditions to verify the reduction code is vectorized.

	* gcc.target/powerpc/pr46728-1.c: Pass -fno-ident to eliminate
	failures in case 'pow', such as 'powerpc' is used in the compiler
	version name.
	* gcc.target/powerpc/pr46728-2.c: Likewise.
	* gcc.target/powerpc/pr46728-3.c: Likewise.
	* gcc.target/powerpc/pr46728-4.c: Likewise.
	* gcc.target/powerpc/pr46728-5.c: Likewise.
	* gcc.target/powerpc/pr46728-7.c: Likewise.
	* gcc.target/powerpc/pr46728-8.c: Likewise.
	* gcc/testsuite/gcc.dg/pr46728-6.c: Likewise.

2012-11-02  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/tree-ssa/loop-38.c: New testcase.

2012-11-02  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/tree-ssa/cunroll-10.c: New testcase.
	* gcc.dg/tree-ssa/cunroll-9.c: New testcase.

2012-11-02  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55130
	* gcc.target/i386/pr55130.c: New test.

2012-11-02  Jakub Jelinek  <jakub@redhat.com>

	PR target/55147
	* gcc.target/i386/pr55147.c: New test.

2012-11-01  David Edelsohn  <dje.gcc@gmail.com>

	* gfortran.dg/default_format_1.f90: XFAIL on AIX.
	* gfortran.dg/default_format_denormal_1.f90: Same.

2012-11-01  Marc Glisse  <marc.glisse@inria.fr>

	PR middle-end/55001
	* g++.dg/ext/vector19.C: Remove target restrictions.
	* gcc.dg/fold-compare-7.c: New testcase.
