@@ -1,3 +1,12 @@
+2012-11-03  H.J. Lu  <hjl.tools@gmail.com>
+	    Jack Howarth  <howarth@bromo.med.uc.edu>
+
+	* lib/target-supports.exp (check_effective_target_maybe_x32): New
+	proc.
+	* gcc.target/i386/pr54457.c: Use dg-require-effective-target
+	maybe_x32.
+	* gcc.target/i386/pr53249.c: Likewise.
+
 2012-11-03  Andrew Pinski  <apinski@cavium.com>
 
 	 * gcc.target/mips/octeon-bbit-3.c: Change the second call to abort to
